--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.5.1",
   "private": true,
   "dependencies": {
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.2",
     "cloudinary-react": "^1.8.1",
     "gulp": "4.0.2",
